# nextcrew.ai

apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: crews.py
apps/api/app/configs/: settings.py
apps/api/app/core/: agents.py  crewai.py  job_manager.py  tasks.py
apps/api/app/schemas/: __init__.py  crew.py
apps/web/: package-lock.json
